--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@nextui-org/react": "^1.0.0-beta.13",
+    "@react-google-maps/api": "^2.19.0",
     "@types/node": "20.4.2",
     "body-parser": "^1.20.2",
     "eslint": "8.45.0",
@@ -24,6 +26,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@kamona/tailwindcss-perspective": "^0.1.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
